WIP some fixes
